# microwork-hunter

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_platform.yml
.github/workflows/: ci.yml  hunter.yml  review-bot.yml
cookies/: README.md
docs/: ROADMAP.md
src/: __init__.py  config.py
src/browser/: __init__.py  base_browser.py  obscura_browser.py  playwright_browser.py
src/hunters/: __init__.py  discover.py
src/utils/: __init__.py  ai_helper.py  cookie_validator.py  earnings_tracker.py  health.py  logger.py  retry.py  review_compiler.py  sanitizer.py  state.py  task_filter.py
src/workers/: __init__.py  executor.py  review_handler.py
tests/: conftest.py  test_executor.py  test_logger.py  test_review_compiler.py  test_review_handler.py  test_state.py  test_task_filter.py  test_task_model.py
